Fix scrollbar erroneously appearing on console logs

--- a/src/Aspire.Dashboard/Components/Controls/LogViewer.razor.css
+++ b/src/Aspire.Dashboard/Components/Controls/LogViewer.razor.css
@@ -28,7 +28,6 @@
     width: 100%;
     overflow: auto;
     background-color: var(--console-background-color);
-    margin-top: 10px;
 }
 
 ::deep .log-container {
